SET(Armite_SOURCES
    ${TOOLS_DIR}/Armite/main.cpp
    ${TOOLS_DIR}/Armite/sdl.cpp
)

SET(Armite_LIBRARIES
    ${JavaScriptCore_LIBRARY_NAME}
    ${WebCore_LIBRARY_NAME}
    ${WebKit_LIBRARY_NAME}
    ${CAIRO_LIBRARIES}
    ${LIBXML2_LIBRARIES}
    ${SQLITE_LIBRARIES}
    ${CURL_LIBRARIES}
    -lSDL
)

LIST(APPEND Armite_INCLUDE_DIRECTORIES
  ${WEBKIT_DIR}/armite
  ${WEBKIT_DIR}/armite/Platform
  ${CAIRO_INCLUDE_DIRS}
)


INCLUDE_DIRECTORIES(${Armite_INCLUDE_DIRECTORIES})
ADD_EXECUTABLE(armite ${Armite_SOURCES})
TARGET_LINK_LIBRARIES(armite ${Armite_LIBRARIES})
SET_TARGET_PROPERTIES(armite PROPERTIES RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}")

